# recipe_keeper

./: .env  .gitignore  Makefile  README.md  chat.py  chat_agent.py  docker-compose.yml  main.py  pyproject.toml  rag.py
extension/: README.md  index.html  package-lock.json  package.json  vite.config.js
extension/public/: manifest.json
extension/src/: background.js  popup.html  popup.js
learning/: l2.py
recipes/: 2025-11-23_09-36-03.json  2025-11-23_09-38-18.json
server/: main.py
test-recipes/: 2025-11-22_07-56-12.json  2025-11-23_09-34-19.json  2025-11-23_09-35-28.json  2025-11-23_09-36-44.json  2025-11-23_09-37-14.json  2025-11-23_09-37-36.json  2025-11-23_09-37-58.json  2025-11-23_09-38-40.json  2025-11-23_09-39-07.json
