[project]
name = "recipe-keeper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.11.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.121.3",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-neo4j>=0.6.0",
    "langchain-weaviate>=0.0.6",
    "neo4j>=5.28.2",
    "openai>=2.8.1",
    "uvicorn>=0.38.0",
    "pydantic>=2.11.1",
    "langchain-openai>=1.0.3",
    "langchain-text-splitters>=1.0.0",
    "langchain-core>=1.0.7",
    "chainlit>=2.9.2",
    "redis>=5.0.0,<6.0.0",
    "redisvl[all]==0.3.9",
]

